# proddl2

./: .gitignore  CMakeLists.txt  COPYING  README.md  Readme.md  TODO
api/client/: .gitignore  install.sh  setup.py
api/client/lib/PRODDL_CLIENT/: client.py  galaxy_client.py
api/client/lib/PRODDL_CLIENT/data/: proddl_client.json
bits/: gen_options_from_proddl.py
bits/IMP/: assess_dope.py  charmm_rigid_pair_pdb.py
bits/IMP/build_tools/: build_rmf.bat  imp_env.bat  imp_toolchain.cmake
bits/IMP/mingw-cross-test/: CMakeLists.txt  cmake_conf.imp.sh  cmake_config.1.sh  cmake_config.sh  mingw-w64-toolchain  test_cache.cmake  test_cross.cpp
cmake/: Checks.cmake  ConfigureFile.cmake  CustomCommands.cmake  ExecuteProcess.cmake  FindBlitz++.cmake  FindFFTW.cmake  ProddlGenerateProfiles.cmake  ProddlInstaller.cmake  PythonInstaller.cmake  Util.cmake
config/linux/: build.sh  proddl-build.jcvi.rc  proddl-deps.rc.in  toolchain.cmake
config/linux/deps_build/: cgal.jcvi.sh  imp.jcvi.sh
config/noarch/: proddl.json.in
config/win/: build.bat  proddl-build.rc.bat  proddl-deps.rc.bat.in  toolchain.cmake
data/: Readme.txt  resarea.F
data/rotgrid/: Readme
data/stc/: README
data/stc/lib/: VERSION  amino.def
data/stc/lib/defaults/: osx
data/stc/lib/docs/: background.html  basic.html  batch.html  dev.html  download.html  errors.html  index.html  output.ex.html  output.html  overview.html  release5.3.html  sconf.html  tcl.html
data/stc/lib/docs/files/: VERSION.html  amino.def.html  data.sconf.html  jrb.complex.pdb.html  jrb.free.pdb.html  old_batch_stc.html  out.basic.html  out.detail.html  out.ligand.acc.html  standard.html  stc.batch.html  stc.log.html  stcDefaults.html
data/stc/lib/docs/images/: stc-v2.2.thumb
data/stc/lib/examples/basic/: README  example.ps  out.basic  out.complex.acc  out.detail  out.enzyme.acc  out.ligand.acc  stc.defaults
data/stc/lib/examples/batch/: .complex.dia  .complex.edpdb  .detail  .enzyme.acc  .enzyme.radii  .ligand.edpdb  README  f1.basic  f1.complex  f1.detail  f1.enzyme  f1.enzyme.acc  f1.ligand  f1.ligand.acc  f2.basic  f2.complex  f2.complex.acc  f2.detail  f2.enzyme  f2.enzyme.acc  f2.ligand  f2.ligand.acc  f3.basic  f3.complex  f3.complex.acc  f3.detail  f3.enzyme  (+5 more)
data/stc/tcl/: asa.tcl  batch.tcl  histo.tcl  init.tcl  main.tcl  thermo.tcl  unix.tcl  ustc.tcl  util.tcl
include/PRODDL/: config.hpp  docking.hpp  docking_app.hpp  docking_fft.hpp  docking_io_bin.hpp  docking_io_hdf5.hpp  docking_molforce.hpp  docking_molstruct.hpp  exceptions.hpp  gap_align.hpp  grammres.hpp  pdb.hpp  potentialRes2Res.hpp  potentials.hpp  potentials_inc.hpp  potentials_total.hpp  potentials_total_rot.hpp  potentials_types.hpp  refine_rigid.hpp  refine_rigid_macopt.hpp  refine_rotamers.cpp  refine_rotamers.hpp  res2res.fabian.6A.cpp  res2res.fabian.7A.cpp  types.hpp
include/PRODDL/Blitz/: bzalgor.hpp  bzarray.hpp  bzarray_iter.hpp  bzatio.hpp  bztinyvec.hpp  bzutil.hpp
include/PRODDL/Common/: argparse.hpp  atregexp.hpp  bz_cast.hpp  bz_vect_ext.hpp  c_array.hpp  common_algor.hpp  common_types.hpp  debug.hpp  function.hpp  g_options.hpp  iterator.hpp  logger.hpp  math.hpp  nd_index_iter.hpp  options.hpp  options_io_json.hpp  queue.hpp  string_util.hpp  to_string.hpp
include/PRODDL/Common/attic/: g_logger.hpp  logger.hpp
include/PRODDL/Compiler/: limits
include/PRODDL/Contrib/: potential_step.hpp
include/PRODDL/Geom/: bounding.hpp  bz_uniform_rot.hpp  cluster.hpp  euler.hpp  gdiam_simple.hpp  geom_except.hpp  move.hpp  pairdist.cc  pairdist.hpp  partpoints.hpp  points.hpp  quatfit.cc  quatfit.hpp  quatfit_call.hpp  rotational_grid.hpp  symmetry.hpp  traits.hpp  transformation.hpp  uniform_points_sphere.hpp  uniform_points_sphere2.hpp  uniform_points_sphere3.hpp  uniform_rot.hpp
include/PRODDL/Grid/: grid.hpp  gridcoord.hpp  gridexcept.hpp  project.hpp
include/PRODDL/IO/: hdf5.hpp  rigid.hpp
include/PRODDL/Math/: fft.cc  fft.hpp  fftw.hpp  math_except.hpp  matr.hpp  pfactors.hpp
include/PRODDL/Mpi/: blitz.hpp  datatypes.hpp  dispatcher.hpp  mpi.hpp  mpi_logger.hpp  tags.hpp
include/PRODDL/Optim/: DESolver.hpp  macopt.hpp  objective_func.hpp  objective_func_bz.hpp  optim_asa.hpp  optim_asa_base.hpp  optim_except.hpp  optim_mac.hpp
include/PRODDL/Os/: compressed_io.hpp  compressed_io_except.hpp  fstream.cc  fstream.h  ipstream.cc  ipstream.h  opstream.cc  opstream.h  pipe_stream.cpp  pipe_stream.hpp  pipe_stream_except.hpp
include/PRODDL/Testing/: config.hpp  ctestc.hpp  exception.hpp
python/: .gitignore  CMakeLists.txt  Readme.md  config.py.in  setup.py.in
python/bits/: Readme.txt
python/lib/MGT/: BatchMakeflow.py  Logging.py  MakeflowArgParser.py
python/lib/PRODDL/: __init__.py  conf_io.py  debug_on_error.py  dock.py  force_field_fft.py  json_conf.py  resources.py  util.py
python/lib/PRODDL/imp/: __init__.py  force_field_fft.py  setup_logging.py
python/lib/PRODDL/test/: conftest.py  test_app.py  test_imp.py
src/PRODDL/: CMakeLists.txt  PDB_ext.cpp  dockingE.cpp  docking_main.cpp  export_models.cpp  gap_align.cpp  grammres.cpp  lowrez_benchmarking_ext.cpp  potentialRes2Res.cpp
src/PRODDL/Common/: logger.cpp  options_io_json.cpp  string_util.cpp  test_bz_cast.cpp  test_bz_ext.cpp  test_bz_tiny.cpp  test_c_array.cpp  test_logger.cpp  test_nd_index_iter.cpp  test_options.cpp  test_queue.cpp
src/PRODDL/Geom/: gdiam_simple.cpp  test_cluster.cpp  test_gdiam_simple.cpp  test_pairdist.cpp  test_rotational_grid.cpp  test_transformation.cpp
src/PRODDL/Grid/: test_grid.cpp
src/PRODDL/IO/: test_bob_hdf5.cpp  test_dock_io_bin.cpp
src/PRODDL/Math/: test_pfactors.cpp
src/PRODDL/Mpi/: test_blitz_ext.cpp  test_hello_world_ext.cpp  test_hello_world_ext1.cpp
src/PRODDL/Optim/: DESolver.cpp  DETest.cpp  asa_adaptor.cpp  asa_adaptor.h  asa_adaptors.h  asa_opt  asa_user_cst.cpp  asaopt.hpp  build_DETest.sh  macopt_mng.cpp  optim_asa.cpp  test_asa.cpp  test_optim_mac.cpp  user_cst.h
src/PRODDL/Os/: compressed_io.cpp  test_compressed_io.cpp  test_pipe_stream.cpp
src/PRODDL/Testing/: gtestc_main.cpp  test_gtestc_samp.cpp
(+54 files in other folders)
